# better-weather

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: lint.yml
better_weather/: handler.py  yr.py
tests/: test_yr.py
