[tool.poetry]
name = "better-weather"
version = "0.1.0"
description = "Correcting systematic errors in weather forcasts"
authors = ["Bendik Samseth <b.samseth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.1"
commitizen = "^2.17.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
