[tool.poetry]
name = "better-weather"
version = "0.1.0"
description = "Correcting systematic errors in weather forcasts"
authors = ["Bendik Samseth <b.samseth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pydantic = "^1.8.2"
boto3 = "^1.18.36"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.1"
commitizen = "^2.17.11"
pytest = "^6.2.4"
types-requests = "^2.25.6"
types-boto3 = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = [
    "better_weather/__init__.py",
    "pyproject.toml:version"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
